# books

./: .gitignore  AGENTS.md  CLAUDE.md  T1-CN_Git 文件清单.md  test_write.md
agent-core/: README.md  ocac  (+12 more)
multi-agent-writer/: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  REVIEW_SYSTEM_DESIGN.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
multi-agent-writer/.github/workflows/: ci.yml
multi-agent-writer/config/: config.toml
multi-agent-writer/hydroscribe/: __init__.py  cli.py  schema.py
multi-agent-writer/hydroscribe/agents/: __init__.py  base_reviewer.py  base_writer.py
multi-agent-writer/hydroscribe/agents/reviewers/: __init__.py  book_reviewers.py  cn_reviewers.py  patent_reviewers.py  ppt_reviewers.py  report_reviewers.py  sci_reviewers.py  std_cn_reviewers.py  std_int_reviewers.py  wechat_reviewers.py
multi-agent-writer/hydroscribe/agents/utilities/: __init__.py  consistency_checker.py  glossary_guard.py  reference_manager.py
multi-agent-writer/hydroscribe/agents/writers/: __init__.py  book_writer.py  cn_writer.py  patent_writer.py  ppt_writer.py  report_writer.py  sci_writer.py  std_cn_writer.py  std_int_writer.py  wechat_writer.py
multi-agent-writer/hydroscribe/api/: app.py
multi-agent-writer/hydroscribe/engine/: __init__.py  audit_log.py  book_registry.py  config_loader.py  context_manager.py  event_bus.py  llm_bridge.py  llm_provider.py  logging_config.py  orchestrator.py
multi-agent-writer/hydroscribe/prompts/: __init__.py  quality_monograph.md  quality_t1.md  quality_textbook.md  review_format.md  system_base.md
multi-agent-writer/hydroscribe/static/: index.html
multi-agent-writer/hydroscribe/tools/: __init__.py  context_tools.py  file_tools.py  quality_tools.py
multi-agent-writer/tests/: test_api.py  test_context_manager.py  test_event_bus.py  test_llm_bridge.py  test_llm_provider.py  test_logging_config.py  test_orchestrator_integration.py  test_phase10_features.py  test_phase11_features.py  test_phase12_features.py  test_phase13_features.py  test_phase14_features.py  test_phase15_features.py  test_phase8_features.py  test_phase9_features.py  test_quality_tools.py  test_schema.py
(+1254 files in other folders)
