[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroscribe"
version = "0.2.0"
description = "CHS 多智能体协同写作助手 — 基于 OpenManus 架构"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CHS Writing System"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[project.scripts]
hydroscribe = "hydroscribe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydroscribe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
